# NexEngine

./: .gitignore  CMakeLists.txt  README.md
NexCore/: CMakeLists.txt
NexCore/includes/NexCore/Core/: Application.h  Core.h  CoreEvent.h  CoreEventTypes.h  FrameListener.h  Log.h  Singleton.h  Window.h
NexCore/includes/NexCore/Input/: Input.h  InputCodes.h  InputEventTypes.h  InputManager.h
NexCore/includes/NexCore/Render/: Renderer.h
NexCore/includes/NexCore/Ui/ImGui/: ImGuiLayer.h
NexCore/src/NexCore/Core/: Application.cpp
NexCore/src/NexCore/Input/: InputManager.cpp
NexCore/src/NexCore/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
NexCore/src/NexCore/Ui/ImGui/: ImGuiLayer.cpp
NexMath/: CMakeLists.txt
NexMath/includes/NexMath/: Vec2.h  Vec3.h
NexMath/includes/NexMath/base/: definisions.h  vec2_type.h  vec2_type.inl  vec3_type.h  vec3_type.inl
